# project-creator

./: README.md  project-creator.py  pyproject.toml
project_creator/: main.py  replace.py  variables.py
