[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-creator"
version = "0.1.0"
description = "Project creator"
authors = [{name = "Rod Johnson", email = "rod@embabel.com"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
project-creator = "project_creator.main:main"
